# NCMToMP3ForWangYiYun

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  conversion.rs  id3_tags.rs  lib.rs  lyrics.rs  main.rs  models.rs  ncm.rs  scanner.rs  settings.rs
src/app/: conversion.js  fileQueue.js  settings.js
src/components/: AppHeader.svelte  DropZone.svelte  FileList.svelte  SettingsModal.svelte
