[package]
name = "ncm-converter"
version = "1.0.0"
description = "NCM to MP3/FLAC Converter - 网易云音乐格式转换工具"
authors = ["NCM Converter Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
aes = "0.7"
block-modes = "0.8"
walkdir = "2"
thiserror = "1.0"
id3 = "1"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
